# OpenMPDemo

./: CMakeLists.txt  README.md
